--- a/views/index.njk
+++ b/views/index.njk
@@ -21,7 +21,7 @@
 
                             <a href="./display?name={{data.name}}">
                                 {%- if data.nameTokens is defined and (data.nameTokens | length) != 1 -%}
-                                    {{- data.nameTokens | join('') -}}
+                                    {{ data.nameTokens | join('') }}
                                 {%- else -%}
                                     <span>{{ data.nameTokens[0] | safe }}</span>
                                 {%- endif -%}
@@ -38,7 +38,7 @@
                         data-parent-count="{{ data.parentCount }}"
                         data-child-count="{{ data.childCount }}"
                         {{ 'data-left-pad=true' if data.leftPad else '' }}
-                        {{ 'data-has-child-group=true' if data.children2 is defined and (data.children2 | length) > 0 else ''}}
+                        {{ 'data-has-child-group=true' if data.children2 is defined and (data.children2 | length) > 0 else '' }}
                         >
 
                         <ul class="parents" {{ 'data-derive-from-second=true' if data.gender == 'f' or data.gender == 'w' and data.parentCount <= 1 else '' }}>
