--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -26,167 +26,198 @@ $name-width: calc(1rem + $name-padding * 2 + $border-width * 2);
 $min-name-height:  calc($min-name-length + $name-padding * 2 + $border-width * 2);
 
 .tree {
-
     padding: 1em;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto;
+    grid-template-areas: "title title" "label content";
+    flex-direction: row;
+    gap: $horizontal-gap;
 
-    ul {
-        display: flex;
-        flex-direction: row;
-        &.parents {
-            gap: $horizontal-gap;
-
-            > li:nth-child(2) {
-                position: relative;
-                &::after {
-                    content: "";
-                    position: absolute;
-                    width: $horizontal-gap;
-                    height: 0;
-                    top: calc($min-name-height - 0.5rem);
-                    left: -$horizontal-gap;
-                    border-top: $line-thickness solid black;
-                }
-            }
-
-            > li:nth-child(3) {
-                position: relative;
-                order: -1;
-                &::after {
-                    content: "";
-                    position: absolute;
-                    width: $horizontal-gap;
-                    height: 0;
-                    top: calc($min-name-height - 0.5rem);
-                    right: -$horizontal-gap;
-                    border-top: $line-thickness solid black;
-                }
-            }
-        }
-        &.children {
-            gap: $horizontal-gap;
-            justify-content: center;
-            // min-width: 100%;
-
-            &-group {
-                flex-direction: row-reverse;
-                gap: $horizontal-gap;
-            }
-
-            > li:not(:only-child) {
-                position: relative;
-                &::before {
-                    position: absolute;
-                    content: "";
-                    width: calc(100% + $horizontal-gap);
-                    height: 0;
-                    border-top: $line-thickness solid black;
-                    top: calc($vertical-gap / -2);
-                }
-
-                &:first-child::before {
-                    content: "";
-                    width: calc((100% + $horizontal-gap) / 2);
-                    left: 50%;
-                }
-                &:last-child::before {
-                    content: "";
-                    width: calc((100% + $horizontal-gap) / 2);
-                    right: 50%;
-                }
-
-                &[data-parent-count="2"] {
-                    &:first-child::before {
-                        width: calc((100% + $horizontal-gap) / 2 + ($name-width + $horizontal-gap) / 2);
-                        left: calc(50% - ($name-width + $horizontal-gap) / 2);
-                    }
-                    &:last-child::before {
-                        width: calc((100% + $horizontal-gap) / 2 - ($name-width + $horizontal-gap) / 2);
-                        right: calc(50% + ($name-width + $horizontal-gap) / 2);
-                    }
-                }
-            }
-
-            ul.parents > li:first-child .name-box::before,
-            > li > .name-box:only-child::before {
-                position: absolute;
-                content: "";
-                height: calc($vertical-gap / 2);
-                width: 0;
-                border-left: $line-thickness solid black;
-                top: calc($vertical-gap / -2);
-                left: 50%;
-            }
+    &__title {
+        grid-area: title;
+        text-align: center;
+        h1 {
+            font-size: 2rem;
         }
     }
-    li {
-        position: relative;
+
+    &__label-container {
+        grid-area: label;
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: $vertical-gap;
 
-        // outline: 1px solid red;
-        // margin: 0.25rem;
+        .tree__label {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            vertical-align: center;
+            font-size: 2rem;
+        }
+    }
 
-        // &[data-close="true"] > .children {
-        //     display: none;
-        // }
+    &__content {
+        grid-area: content;
+        ul {
+            display: flex;
+            flex-direction: row;
+            &.parents {
+                gap: $horizontal-gap;
 
-        &:not([data-child-count="0"]) {
-            // &:not([data-close="true"]) {
-                > .parents {
-
-                    > li:first-child::after {
-                        position: absolute;
-                        z-index: -1;
+                > li:nth-child(2) {
+                    position: relative;
+                    &::after {
                         content: "";
-                        height: calc($vertical-gap / 2 + 100%);
-                        width: 0;
-                        border-left: $line-thickness solid black;
-                        bottom: calc($vertical-gap / -2);
-                        left: 50%;
-                    }
-
-                    &[data-derive-from-second="true"] > li:first-child::after {
-                        left: calc(150% + $horizontal-gap);
+                        position: absolute;
+                        width: $horizontal-gap;
+                        height: 0;
+                        top: calc($min-name-height - 0.5rem);
+                        left: -$horizontal-gap;
+                        border-top: $line-thickness solid black;
                     }
                 }
+
+                > li:nth-child(3) {
+                    position: relative;
+                    order: -1;
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        width: $horizontal-gap;
+                        height: 0;
+                        top: calc($min-name-height - 0.5rem);
+                        right: -$horizontal-gap;
+                        border-top: $line-thickness solid black;
+                    }
+                }
+            }
+            &.children {
+                gap: $horizontal-gap;
+                justify-content: center;
+                // min-width: 100%;
+
+                &-group {
+                    flex-direction: row-reverse;
+                    gap: $horizontal-gap;
+                }
+
+                > li:not(:only-child) {
+                    position: relative;
+                    &::before {
+                        position: absolute;
+                        content: "";
+                        width: calc(100% + $horizontal-gap);
+                        height: 0;
+                        border-top: $line-thickness solid black;
+                        top: calc($vertical-gap / -2);
+                    }
+
+                    &:first-child::before {
+                        content: "";
+                        width: calc((100% + $horizontal-gap) / 2);
+                        left: 50%;
+                    }
+                    &:last-child::before {
+                        content: "";
+                        width: calc((100% + $horizontal-gap) / 2);
+                        right: 50%;
+                    }
+
+                    &[data-parent-count="2"] {
+                        &:first-child::before {
+                            width: calc((100% + $horizontal-gap) / 2 + ($name-width + $horizontal-gap) / 2);
+                            left: calc(50% - ($name-width + $horizontal-gap) / 2);
+                        }
+                        &:last-child::before {
+                            width: calc((100% + $horizontal-gap) / 2 - ($name-width + $horizontal-gap) / 2);
+                            right: calc(50% + ($name-width + $horizontal-gap) / 2);
+                        }
+                    }
+                }
+
+                ul.parents > li:first-child .name-box::before,
+                > li > .name-box:only-child::before {
+                    position: absolute;
+                    content: "";
+                    height: calc($vertical-gap / 2);
+                    width: 0;
+                    border-left: $line-thickness solid black;
+                    top: calc($vertical-gap / -2);
+                    left: 50%;
+                }
+            }
+        }
+        li {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: $vertical-gap;
+
+            // outline: 1px solid red;
+            // margin: 0.25rem;
+
+            // &[data-close="true"] > .children {
+            //     display: none;
             // }
-        }
 
-        &[data-has-child-group="true"] > .parents > li:first-child {
-            &::after {
-                position: absolute;
-                z-index: -1;
-                content: "";
-                height: calc($vertical-gap / 2);
-                width: 0;
-                border-left: $line-thickness solid black;
-                bottom: calc($vertical-gap / -2);
-                left: calc($horizontal-gap / -2);
+            &:not([data-child-count="0"]) {
+                // &:not([data-close="true"]) {
+                    > .parents {
+
+                        > li:first-child::after {
+                            position: absolute;
+                            z-index: -1;
+                            content: "";
+                            height: calc($vertical-gap / 2 + 100%);
+                            width: 0;
+                            border-left: $line-thickness solid black;
+                            bottom: calc($vertical-gap / -2);
+                            left: 50%;
+                        }
+
+                        &[data-derive-from-second="true"] > li:first-child::after {
+                            left: calc(150% + $horizontal-gap);
+                        }
+                    }
+                // }
             }
-            &::before {
-                position: absolute;
-                z-index: -1;
-                content: "";
-                height: calc($vertical-gap / 2);
-                width: 0;
-                border-left: $line-thickness solid black;
-                bottom: calc($vertical-gap / -2);
-                right: calc($horizontal-gap / -2 - $line-thickness);
+
+            &[data-has-child-group="true"] > .parents > li:first-child {
+                &::after {
+                    position: absolute;
+                    z-index: -1;
+                    content: "";
+                    height: calc($vertical-gap / 2);
+                    width: 0;
+                    border-left: $line-thickness solid black;
+                    bottom: calc($vertical-gap / -2);
+                    left: calc($horizontal-gap / -2);
+                }
+                &::before {
+                    position: absolute;
+                    z-index: -1;
+                    content: "";
+                    height: calc($vertical-gap / 2);
+                    width: 0;
+                    border-left: $line-thickness solid black;
+                    bottom: calc($vertical-gap / -2);
+                    right: calc($horizontal-gap / -2 - $line-thickness);
+                }
+
             }
 
-        }
+            &[data-parent-count="2"][data-left-pad="true"] > ul.parents::before,
+            &[data-parent-count="2"][data-child-count="1"] > ul.parents[data-derive-from-second] + ul.children::before {
+                content: "";
+                width: $name-width;
+            }
 
-        &[data-parent-count="2"][data-left-pad="true"] > ul.parents::before,
-        &[data-parent-count="2"][data-child-count="1"] > ul.parents[data-derive-from-second] + ul.children::before {
-            content: "";
-            width: $name-width;
-        }
-
-        &[data-parent-count="2"] > .children {
-            justify-content: flex-start;
-            min-width: 100%;
+            &[data-parent-count="2"] > .children {
+                justify-content: flex-start;
+                min-width: 100%;
+            }
         }
     }
 }
