--- a/views/display.njk
+++ b/views/display.njk
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>詹氏發</title>
     <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/index.js" defer></script>
 </head>
 <body>
     <main>
