lazy load image and pdf, add loading text on pdf

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "TW Kai";
   font-style: normal;
@@ -315,6 +316,22 @@ html, body {
 #display-container .pdf-container iframe {
   width: 100%;
   height: 100%;
+}
+#display-container .pdf-container::before {
+  position: absolute;
+  content: "文件讀取速度較慢";
+  top: calc(50% + 5em);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+@keyframes rotating {
+  from {
+    transform: translate(-50%, -50%) rotateZ(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotateZ(360deg);
+  }
 }
 #display-container .pdf-container::after {
   position: absolute;
