--- a/views/utils/chart.njk
+++ b/views/utils/chart.njk
@@ -8,7 +8,13 @@
 
             <a href="./display?name={{data.name}}">
                 {%- if data.nameTokens is defined and (data.nameTokens | length) != 1 -%}
-                    {{ data.nameTokens | join('') }}
+                    {%- if data.nameStyle is defined -%}
+                        {%- for token in data.nameTokens -%}
+                            <span style="{{ data.nameStyle[loop.index0].style or '' if loop.index0 < data.nameStyle | length else '' }}">{{token}}</span>
+                        {%- endfor -%}
+                    {%- else -%}
+                        {{ data.nameTokens | join('') }}
+                    {%- endif -%}
                 {%- else -%}
                     <span>{{ data.nameTokens[0] | safe }}</span>
                 {%- endif -%}
